# Point-Set-Registration

./: CMakeLists.txt  README.md  contributors.txt
cmake/: Find3rdParty.cmake  Find3rdParty.cmake~
cpd/: test.cpp
cpd/Base/: data.hpp  matrix.hpp  parameters.hpp  vector.hpp  visualizer.hpp
cpd/Core/: cpd_affine.hpp  cpd_base.hpp  cpd_nonrigid.hpp  cpd_rigid.hpp  em.hpp  registrator.hpp
cpd/base/: data.hpp  matrix.hpp  parameters.hpp
cpd/core/: cpd_base.hpp  cpd_nonrigid.hpp  registrator.hpp
cpd/disp/: render_thread.hpp
cpd/fast/: fgt_wrapper.hpp  low_rank.hpp
data/: Y-m.txt  face1.txt  lily-0.txt  x-nonrigid-452.txt  y-nonrigid-392.txt  y-nonrigid-452.txt
include/Base/: data.h  matrix.h  types.h  vector.h
include/Core/: cpd_affine.h  cpd_base.h  cpd_nonrigid.h  cpd_rigid.h  em.h  registrator.h
include/base/: data.hpp  matrix.hpp  parameters.hpp
include/core/: cpd_base.hpp  cpd_nonrigid.hpp  cpd_rigid.hpp  registrator.hpp
include/disp/: render_thread.hpp
include/fast/: fgt_wrapper.hpp  low_rank.hpp
src/: test.cpp
src/Base/: data.cpp  vector.cpp
src/Core/: cpd_affine.cpp  cpd_base.cpp  cpd_nonrigid.cpp  cpd_rigid.cpp  registrator.cpp
